--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "myapp",
+  "name": "github-repos-nodejs-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "5.0.1",
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "cros": "^1.0.1",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "sqlite": "^4.0.19",
-    "sqlite3": "^5.1.6"
+    "axios": "^0.19.2",
+    "express": "^4.17.1"
   }
 }
